qemu (1:8.1.2+ds-1deepin1) unstable; urgency=medium

  * remove dependenct gcc-11-alpha-linux-gnu

 -- bluesky <chenchongbiao@deepin.org>  Sun, 03 Dec 2023 15:40:34 +0800

qemu (1:8.1.2+ds-1) unstable; urgency=medium

  * upstream 8.1.2 stable/bugfix release
  * remove all stable-staging/ patches and two more
    (all included into 8.1.2)
  * d/rules: microvm build: do not explicitly enable avx2

 -- Michael Tokarev <mjt@tls.msk.ru>  Tue, 17 Oct 2023 09:44:39 +0300

qemu (1:8.1.1+ds-2) unstable; urgency=medium

  * d/rules: fix binary target to produce both arch and indep
    binaries instead of omitting indep one(s)
  * d/patches: sync with current staging-8.1 branch, many new fixes
  * additional fixes:  
    +hw-ide-ahci-fix-legacy-software-reset.patch
    +target-mips-Fix-MSA-BZ-BNZ-opcodes-displacement.patch
    +hw-ide-reset-cancel-async-DMA-operation-before-reset.patch

 -- Michael Tokarev <mjt@tls.msk.ru>  Sun, 08 Oct 2023 12:28:55 +0300

qemu (1:8.1.1+ds-1) unstable; urgency=medium

  * new upstream stable/bugfix release
  * remove all stable-staging/ patches, keep
    softmmu-Use-async_run_on_cpu-in-tcg_commit.patch
  * vfio-display-fix-missing-update-to-set-backing-field.patch
  * scsi-disk-disallow-small-block-sizes-CVE-2023-42467.patch
    (Closes: #1051899, CVE-2023-42467)
  * migration-qmp-Fix-crash-on-setting-tls-authz-with-nu.patch
  * d/patches/move-vl-opts/ - stop linking everything with async-teardown.c,
    un-FTBFS on ia64
  * d/control: minor: remove old todo comments
  * d/control: disable rbd (ceph) on 32bit platforms (Closes: #1053172)
  * d/control: enable rbd on riscv64 once it's built there
  * d/copyright: also remove subprojects/dtc

 -- Michael Tokarev <mjt@tls.msk.ru>  Sun, 01 Oct 2023 22:11:24 +0300

qemu (1:8.1.0+ds-6) unstable; urgency=medium

  * re-enable softmmu-Use-async_run_on_cpu-in-tcg_commit.patch
  * add https://www.mail-archive.com/qemu-devel@nongnu.org/msg989073.html