@@ -1,6 +1,7 @@
 qemu (1:8.1.2+ds-1deepin1) unstable; urgency=medium
 
   * remove dependenct gcc-11-alpha-linux-gnu
+  * not dependent on riscv64 or arm64
 
  -- bluesky <chenchongbiao@deepin.org>  Sun, 03 Dec 2023 15:40:34 +0800
 
